# oscanity

./: .editorconfig  .gitignore  Cargo.toml  README.md  rustfmt.toml
scripts/: clippy.args  clippy.sh  development-setup.sh
src/: main.rs  receive.rs  send.rs
